--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ html {
     scroll-behavior: smooth;
 }
 
-
 section {
     display: block;
     font-family: "futura-pt", sans-serif;
@@ -31,12 +30,12 @@ h1 {
   
   .top_nav ul {
     margin: 0.5%;
-    padding: 0;
+    padding:;
   }
   
   .top_nav li {
     display: inline-block;
-    padding: 10px 100px 10px 180px;
+    padding: 1em 3rem;
   }
   
   .top_nav li a {
