--- a/about.css
+++ b/about.css
@@ -6,22 +6,29 @@ body {
         "header header"
         "main main"
         "footer footer";
-    font-family: system-ui, sans-serif;
+    font-family: "futura-pt", sans-serif;
     font-size: 1.5em;
   }
 
   header {
-	grid-area: header;
+	grid-area: header ;
 	background: #2f0164;
 	color: #ffcc00;
     padding: 1rem;
-	text-align: center;
+    text-align: center;
 }
 
+header > h1 {
+        font-family: "futura-pt", sans-serif;
+        font-weight: 600;
+        font-size: 200%;
+        font-style: normal;
+        padding: 1rem 3rem 1rem 3rem;
+}
+    
 
 main > section {
-    padding: 10%;
-    
+    padding: 1.5rem;
 }
 /*
  * Made by Erik Terwan
@@ -165,10 +172,18 @@ main > section {
  
  #menu li
  {
-   padding: 10px 0;
+   padding: 2% 1rem 2% ;
+   text-align: left;
    font-size: 22px;
  }
- 
+
+ #menu li li
+ {
+   padding: 2%;
+   list-style-type: none;
+   font-size: 1rem;
+ }
+
  /*
   * And let's slide it in from the left
   */
