--- a/about.css
+++ b/about.css
@@ -1,24 +1,26 @@
-body {
+ body {
     margin: 0;
-    display: grid;
+    /* display: grid;
     grid-template-columns: minmax(min-content, 375px) 1fr;
     grid-template-areas:
         "header header"
         "main main"
-        "footer footer";
+        "footer footer"; */
     font-family: "futura-pt", sans-serif;
     font-size: 1.5em;
   }
 
   header {
-	grid-area: header ;
+  grid-area: header ;
+  position: fixed;
+  width: 100%;
 	background: #2f0164;
 	color: #ffcc00;
     padding: 1rem;
     text-align: center;
 }
 
-header > h1 {
+.about_header {
         font-family: "futura-pt", sans-serif;
         font-weight: 600;
         font-size: 200%;
@@ -30,6 +32,9 @@ header > h1 {
 main > section {
     padding: 1.5rem;
 }
+
+
+
 /*
  * Made by Erik Terwan
  * 24th of November 2015
@@ -42,7 +47,7 @@ main > section {
  */
 
  
- #menuToggle
+/* #menuToggle
  {
    display: block;
    position: relative;
@@ -80,15 +85,13 @@ main > section {
    
    cursor: pointer;
    
-   opacity: 0; /* hide this */
-   z-index: 2; /* and place it over the hamburger */
+   opacity: 0;
+   z-index: 2; 
    
    -webkit-touch-callout: none;
  }
  
- /*
-  * Just a quick hamburger
-  */
+ 
  #menuToggle span
  {
    display: block;
@@ -119,10 +122,6 @@ main > section {
    transform-origin: 0% 100%;
  }
  
- /* 
-  * Transform all the slices of hamburger
-  * into a crossmark.
-  */
  #menuToggle input:checked ~ span
  {
    opacity: 1;
@@ -130,27 +129,18 @@ main > section {
    background: #ffcc00;
  }
  
- /*
-  * But let's hide the middle one.
-  */
  #menuToggle input:checked ~ span:nth-last-child(3)
  {
    opacity: 0;
    transform: rotate(0deg) scale(0.2, 0.2);
  }
  
- /*
-  * Ohyeah and the last one should go the other direction
-  */
+
  #menuToggle input:checked ~ span:nth-last-child(2)
  {
    transform: rotate(-45deg) translate(0, -1px);
  }
  
- /*
-  * Make this absolute positioned
-  * at the top left of the screen
-  */
  #menu
  {
    position: absolute;
@@ -162,7 +152,6 @@ main > section {
    background: #2f0164;
    list-style-type: none;
    -webkit-font-smoothing: antialiased;
-   /* to stop flickering of text in safari */
    
    transform-origin: 0% 0%;
    transform: translate(-100%, 0);
@@ -184,10 +173,52 @@ main > section {
    font-size: 1rem;
  }
 
- /*
-  * And let's slide it in from the left
-  */
  #menuToggle input:checked ~ ul
  {
    transform: none;
+ } */
+
+ #topnav {
+  margin-top: -21px;
+  /* height: 100%; */
+ }
+ 
+ .nav {
+  overflow: hidden;
+ }
+ 
+ .nav a {
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1rem;
+ }
+ 
+ .nav a:hover {
+  background-color: #ddd;
+  color: black;
+ }
+ 
+ .nav a.active {
+  background-color: #c59775;
+  color: white;
+ }
+ 
+ .nav .icon {
+  display: none;
+ }
+
+ #menu li
+ {
+   padding: 2%;
+   list-style-type: none;
+   font-size: 1rem;
+ }
+
+ #menu ul
+ {
+   padding: 2%;
+   list-style-type: none;
+   font-size: 1rem;
  }
