--- a/about.css
+++ b/about.css
@@ -1,40 +1,205 @@
- body {
-    margin: 0;
-    /* display: grid;
-    grid-template-columns: minmax(min-content, 375px) 1fr;
-    grid-template-areas:
-        "header header"
-        "main main"
-        "footer footer"; */
-    font-family: "futura-pt", sans-serif;
-    font-size: 1.5em;
-  }
 
-  header {
+ /* General CSS for About Page */
+
+
+  /* .header {
   grid-area: header ;
-  position: fixed;
+  position: relative;
   width: 100%;
 	background: #2f0164;
 	color: #ffcc00;
-    padding: 1rem;
-    text-align: center;
+  padding: 1rem;
+  text-align: center;
+} */
+
+
+main > section {
+  padding: 1.5rem;
+}
+
+footer{
+  background-color:  #2f0164;
+  border-radius: 5px;
+}
+
+
+
+/* Typography for About Page */
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+h1 {
+  font-family: "futura-pt", sans-serif;
+}
+
+.sub_pages { 
+  font-family: "futura-pt", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  font-style: normal;
+  color:  #2f0164;
+  text-align: center;
+}
+
+.h2_about { 
+  font-family: "futura-pt", sans-serif;
+  font-weight: 550;
+  font-size: 1.6rem;
+  font-style: italic;
+  color:  #2f0164;
+  text-align: center;
+  padding: 1rem;
+
+}
+
+h3 {
+  font-family: "futura-pt", sans-serif;
+  font-weight: 550;
+  font-size: 1.4rem;
+  font-style: normal;
+  color:  #2f0164;
+  text-align: center;
 }
 
 .about_header {
         font-family: "futura-pt", sans-serif;
         font-weight: 600;
-        font-size: 200%;
+        font-size: 1rem;
         font-style: normal;
         padding: 1rem 3rem 1rem 3rem;
-}
-    
 
-main > section {
-    padding: 1.5rem;
 }
 
+p {
+  font-family: "futura-pt",sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  font-style: normal;
+  color:  #2f0164;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+#goals_list {
+  font-family: "futura-pt",sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  font-style: normal;
+  color:  #2f0164;
+  margin-left: 6%;
+  padding-right: 6%;
+
+  
+}
+
+.board_list {
+  font-family: "futura-pt",sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  font-style: normal;
+  color:  #2f0164;
+  padding-right: 4%;
+  text-align: center;
+  list-style-type: none;
+  
+}
+
+footer > p {
+  color: #EDA51A;
+  font-family: "futura-pt",sans-serif;
+  font-weight: 500;
+  font-size: 1.3rem;
+  font-style: italic;
+  padding: 5%;
+  text-align: center;
+}
 
 
+
+/* Page Header Graphics 
+--------------------------------------------------- */
+.graphic_header{
+  margin-top: 5%;
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+/* Navigation
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.top_nav {
+  font: 1.15em;
+  background: #ffffff;
+  border-width: 2rem;
+  font-family: "futura-pt",sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  justify-content: center;
+}
+
+.top_nav ul {
+  margin: 0.5%;
+}
+
+.top_nav li {
+  display: inline-block;
+  padding: 1em;
+  margin-bottom: 1rem;
+  border: 3px solid #2f0164;
+  border-radius: 30px;
+
+}
+
+.top_nav li a {
+  text-decoration: none;
+  color:  #2f0164;
+}
+
+.top_nav li a:hover {
+  padding-bottom: 3px;
+  color: #2f0164;
+}
+
+.tel{
+  float: right;
+}
+
+.content_nav {
+  font-size: 1.15em;
+  background:  #2f0164;
+  border-radius: 5px;
+  text-align: center;
+  font-family: "futura-pt",sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.content_nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+.content_nav li {
+  display: inline-block;
+  padding: 15px 40px;
+}
+
+.content_nav li a {
+  text-decoration: none;
+  color: #EDA51A;
+}
+
+.content_nav li a:hover {
+  padding-bottom: 3px;
+  color: #222;
+}
+
+footer{
+  width: 100%;
+  background-color:  #2f0164;
+  border-radius: 5px;
+}
+
+
+
+/* Option 1 Nav Bar */
 /*
  * Made by Erik Terwan
  * 24th of November 2015
@@ -178,9 +343,11 @@ main > section {
    transform: none;
  } */
 
- #topnav {
+
+ /* Option 2 Nav Bar */
+ /* #topnav {
   margin-top: -21px;
-  /* height: 100%; */
+  height: 100%;
  }
  
  .nav {
@@ -221,4 +388,31 @@ main > section {
    padding: 2%;
    list-style-type: none;
    font-size: 1rem;
- }
+ }*/
+
+ @media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+    /* Typography */
+  .top_nav {
+    font-size: 1.5rem;
+  }
+
+  .content_nav {
+    font-size: 1.7rem;
+  }
+
+  h2 {
+    font-size: 1.15rem;
+  }
+
+  p {
+    font-size: 1.15rem;
+  }
+
+  footer > p{
+    font-size: 1.5rem;
+  }
+
+  }
