--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 html {
@@ -24,7 +25,7 @@ section {
 h2 { 
   font-family: "futura-pt", sans-serif;
   font-weight: 550;
-  font-size: 180%;
+  font-size: 1.7rem;
   font-style: italic;
   color:  #2f0164;
   text-align: center;
@@ -185,4 +186,71 @@ color:  #EDA51A
 
 .page_content{
   margin-bottom: 5rem;
+}
+
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+ 
+  /* Icon containers and icons */
+    
+    .flow {
+      display: inline-flex;
+      width: 100%;
+      justify-content: space-between;
+    }
+    .page_content {
+      float: left;
+      margin: 0;
+      padding: 0;
+    }
+
+    .icon{
+      margin: 0;
+      width: 200px;
+      height: 180px;
+      position: static;
+    }
+
+    #home_header {
+      border: 3px solid  #2f0164;
+      border-radius: 15px;
+      margin-top: 3%;
+      height: 20%;
+    }
+
+    .beam{
+      width: 10%;
+      height: 10%;
+    }
+
+    #find_support{
+      margin: 0;
+      width: 200px;
+      height: 180px;
+      position: static;
+    }
+
+
+  /* Typography */
+  .top_nav {
+    font-size: 1.5rem;
+  }
+
+  .content_nav {
+    font-size: 1.7rem;
+  }
+
+  h2{
+    font-size: 250%;
+  }
+
+  p{
+    font-size: 2.0rem;
+  }
+
+  footer > p{
+    font-size: 2.0rem;
+  }
 }
