--- a/about.css
+++ b/about.css
@@ -2,17 +2,6 @@
  /* General CSS for About Page */
 
 
-  /* .header {
-  grid-area: header ;
-  position: relative;
-  width: 100%;
-	background: #2f0164;
-	color: #ffcc00;
-  padding: 1rem;
-  text-align: center;
-} */
-
-
 main > section {
   padding: 1.5rem;
 }
@@ -25,7 +14,7 @@ footer{
 
 
 /* Typography for About Page */
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 h1 {
   font-family: "futura-pt", sans-serif;
 }
@@ -43,10 +32,9 @@ h1 {
   font-family: "futura-pt", sans-serif;
   font-weight: 550;
   font-size: 1.6rem;
-  font-style: italic;
+  font-style: normal;
   color:  #2f0164;
   text-align: center;
-  padding: 1rem;
 
 }
 
@@ -120,6 +108,15 @@ footer > p {
   margin-top: 5%;
   margin-left: 2%;
   margin-right: 2%;
+}
+
+.beam {
+  width: 40%;
+  height: auto;
+  position: relative;
+  display: block;
+  margin: 5% auto;
+  text-align : center;
 }
 
 /* Navigation
@@ -197,222 +194,91 @@ footer{
   border-radius: 5px;
 }
 
-
-
-/* Option 1 Nav Bar */
-/*
- * Made by Erik Terwan
- * 24th of November 2015
- * MIT License
- *
- *
- * If you are thinking of using this in
- * production code, beware of the browser
- * prefixes.
- */
-
- 
-/* #menuToggle
- {
-   display: block;
-   position: relative;
-   top: 50px;
-   left: 10px;
-   
-   z-index: 1;
-   
-   -webkit-user-select: none;
-   user-select: none;
- }
- 
- #menuToggle a
- {
-   text-decoration: none;
-   color:  #ffcc00;
-   
-   transition: color 0.3s ease;
- }
- 
- #menuToggle a:hover
- {
-   color:#3b9dff;
- }
- 
- 
- #menuToggle input
- {
-   display: block;
-   width: 40px;
-   height: 32px;
-   position: absolute;
-   top: -7px;
-   left: -5px;
-   
-   cursor: pointer;
-   
-   opacity: 0;
-   z-index: 2; 
-   
-   -webkit-touch-callout: none;
- }
- 
- 
- #menuToggle span
- {
-   display: block;
-   width: 33px;
-   height: 4px;
-   margin-bottom: 5px;
-   position: relative;
-   
-   background: #ffcc00;
-   border-radius: 3px;
-   
-   z-index: 1;
-   
-   transform-origin: 4px 0px;
-   
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-               opacity 0.55s ease;
- }
- 
- #menuToggle span:first-child
- {
-   transform-origin: 0% 0%;
- }
- 
- #menuToggle span:nth-last-child(2)
- {
-   transform-origin: 0% 100%;
- }
- 
- #menuToggle input:checked ~ span
- {
-   opacity: 1;
-   transform: rotate(45deg) translate(-2px, -1px);
-   background: #ffcc00;
- }
- 
- #menuToggle input:checked ~ span:nth-last-child(3)
- {
-   opacity: 0;
-   transform: rotate(0deg) scale(0.2, 0.2);
- }
- 
-
- #menuToggle input:checked ~ span:nth-last-child(2)
- {
-   transform: rotate(-45deg) translate(0, -1px);
- }
- 
- #menu
- {
-   position: absolute;
-   width: 300px;
-   margin: -100px 0 0 -50px;
-   padding: 50px;
-   padding-top: 125px;
-   
-   background: #2f0164;
-   list-style-type: none;
-   -webkit-font-smoothing: antialiased;
-   
-   transform-origin: 0% 0%;
-   transform: translate(-100%, 0);
-   
-   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
- }
- 
- #menu li
- {
-   padding: 2% 1rem 2% ;
-   text-align: left;
-   font-size: 22px;
- }
-
- #menu li li
- {
-   padding: 2%;
-   list-style-type: none;
-   font-size: 1rem;
- }
-
- #menuToggle input:checked ~ ul
- {
-   transform: none;
- } */
-
-
- /* Option 2 Nav Bar */
- /* #topnav {
-  margin-top: -21px;
-  height: 100%;
- }
- 
- .nav {
-  overflow: hidden;
- }
- 
- .nav a {
+/* Images of Board
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.image_container{
   display: block;
-  color: #f2f2f2;
-  text-align: center;
-  text-decoration: none;
-  font-size: 1rem;
- }
- 
- .nav a:hover {
-  background-color: #ddd;
-  color: black;
- }
- 
- .nav a.active {
-  background-color: #c59775;
-  color: white;
- }
- 
- .nav .icon {
-  display: none;
- }
+  justify-content: center;
+  padding-left: 20%;
+}
 
- #menu li
- {
-   padding: 2%;
-   list-style-type: none;
-   font-size: 1rem;
- }
+.image_our_board {
+  display: block;
+  margin-left: 5%;
+  margin-right: auto;
+  width: 70%;
+  margin-bottom: 5%;
+}
 
- #menu ul
- {
-   padding: 2%;
-   list-style-type: none;
-   font-size: 1rem;
- }*/
 
  @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
   and (-webkit-min-device-pixel-ratio: 1) { 
     /* Typography */
-  .top_nav {
-    font-size: 1.5rem;
+    .top_nav {
+      font-size: 1.3rem;
+    }
+  
+    .content_nav {
+      font-size: 1.5rem;
+    }
+  
+    h2 {
+      font-size: 1.6em;
+    }
+  
+    p {
+      font-size: 1.15rem;
+    }
+  
+    footer > p{
+      font-size: 1.5rem;
+      padding: 0;
+    }
+  
+    footer {
+      display: inline-block;
+      width: 100%;
+    }
+
+  .beam {
+    width: 15%;
+    height: auto;
+    position: relative;
+    display: block;
+    margin: 5% auto;
   }
 
-  .content_nav {
-    font-size: 1.7rem;
+  .image_container{
+    width: 80vw;
+    height: auto;
+    display: block;
+    justify-content: center;
+    padding-left: 30%;
   }
 
-  h2 {
-    font-size: 1.15rem;
+  .image_container_2 {
+    width: 95vw;
+    height: auto;
+    display: block;
+    justify-content: center;
   }
 
-  p {
-    font-size: 1.15rem;
+  .image_our_board_2{
+    width: 185px;
+    display: flex;
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 2%;
   }
 
-  footer > p{
-    font-size: 1.5rem;
+  .image_our_board_3{
+    width: 185px;
+    display: flex;
+    padding-left: 170px;
+    margin-bottom: 2%;
   }
 
-  }
+
+}
